[gd_scene load_steps=2 format=3 uid="uid://2fns8idl5tkp"]

[ext_resource type="Script" uid="uid://6dplxtwnfl7p" path="res://scenes/db_test/sql_controller.gd" id="1_w7whn"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w7whn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 116.0
offset_top = 101.0
offset_right = 206.0
offset_bottom = 237.0

[node name="CreateTable" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Create Table"

[node name="InsertData" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Insert"

[node name="SelectData" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Select"

[node name="UpdateData" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Update"

[node name="DeleteData" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Delete"

[node name="CustomSelect" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Custom Select"

[node name="CenterContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 506.0
offset_top = 143.0
offset_right = 928.0
offset_bottom = 247.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Name: "

[node name="name" type="TextEdit" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Score:"

[node name="score" type="TextEdit" parent="CenterContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2

[connection signal="button_down" from="VBoxContainer/CreateTable" to="." method="_on_create_table_button_down"]
[connection signal="button_down" from="VBoxContainer/InsertData" to="." method="_on_insert_data_button_down"]
[connection signal="button_down" from="VBoxContainer/SelectData" to="." method="_on_select_data_button_down"]
[connection signal="button_down" from="VBoxContainer/UpdateData" to="." method="_on_update_data_button_down"]
[connection signal="button_down" from="VBoxContainer/DeleteData" to="." method="_on_delete_data_button_down"]
[connection signal="button_down" from="VBoxContainer/CustomSelect" to="." method="_on_custom_select_button_down"]
